shorting methods UI into private methods createFile -> using Java.nio adjusting display methods